# mask_rcnn_ros

./: CMakeLists.txt  package.xml  requirements.txt
launch/: example.launch  mask_rcnn_node.launch
scripts/: mask_rcnn_node.py
src/mask_rcnn_ros/: coco.py  config.py  model.py  parallel_model.py  shapes.py  utils.py  visualize.py
