<?xml version="1.0"?>
<package format="2">
  <name>mask_rcnn_ros</name>
  <version>0.1.0</version>
  <description>The Mask R-CNN for ROS</description>

  <maintainer email="akio.code@gmail.com">Akio Ochiai</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/mask_rcnn_ros</url>
  <author email="akio.code@gmail.com">Akio Ochiai</author>
  <author>Matterport, Inc.</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- Python3 dependencies -->
  <exec_depend>numpy</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>tensorflow</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
